--- a/style.css
+++ b/style.css
@@ -88,9 +88,11 @@ button:hover {
 @media print {
   html, body {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     background: #fff;
     color: #000;
+    font-size: 20pt; /* 👈 ここでフォントサイズUP */
+    line-height: 1.6;
   }
   #inputArea, button {
     display: none;
@@ -99,5 +101,7 @@ button:hover {
     color: #000;
     background: #fff;
     border: none;
+    font-size: 26pt; /* 👈 出力結果はさらに大きくしてもOK */
+    line-height: 1.8;
   }
 }
